# dsa-labs-LPNU

./: .gitignore  CMakeLists.txt  README.md  main.c
lab1/: CMakeLists.txt  README.md  basic_types_and_iostream.c  basic_types_and_iostream.cpp
lab1_cpp/: CMakeLists.txt  README.md  functions_and_iterative_processes.cpp
lab2/: CMakeLists.txt  README.md  choice_operators.c
lab2_cpp/: CMakeLists.txt  two_dimensional_arrays_and_functions.cpp
lab3/: CMakeLists.txt  README.md  cycle_operators.c
lab3_cpp/: CMakeLists.txt  README.md  strings.cpp
lab4/: CMakeLists.txt  README.md  arrays_and_pointers.c
lab5/: CMakeLists.txt  README.md  two_dimensional_and_dynamic_arrays.c
